--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/dom": "^0.1.21",
     "@dnd-kit/sortable": "^10.0.0",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -42,11 +43,11 @@
     "lucide-react": "^0.553.0",
     "mongoose": "^9.0.0",
     "ms": "^2.1.3",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "progress": "^2.0.3",
-    "react": "19.2.0",
+    "react": "^19.2.1",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.66.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.4.1",
@@ -68,7 +69,7 @@
     "@types/react-dom": "^19",
     "@types/validator": "^13.15.10",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
